src/sass/main.scss
@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
html {
  scroll-behavior: smooth;
  font-family: "Montserrat", sans-serif;
  letter-spacing: 0.2rem;
  line-height: 1.6rem;
}

* {
  box-sizing: border-box;
}

a {
  all: unset;
  cursor: pointer;
}

.content {
  display: flex;
  width: 100%;
  flex-direction: column;
  min-height: 100vh;
  justify-content: space-evenly;
  align-items: center;
  background-image: linear-gradient(to bottom, #55a3fa, #a8cffa);

  h1 {
    font-size: 2.4rem;
    margin-bottom: 20%;
    letter-spacing: 0.1rem;
    line-height: normal;
    text-align: center;
  }

  h2 {
    margin-bottom: 20%;
    font-size: 2rem;
    line-height: normal;
    letter-spacing: normal;
    text-align: center;
  }

  h3 {
    font-size: 1.8rem;
  }

  .top-link-buttons {
    border: 1px solid #55a3fa;
    border-radius: 5px;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    background-image: linear-gradient(to bottom right, #fa5a55, #fa55a3);
    width: 100%;
    padding: 2.3% 0;
    position: absolute;
    top: 0;
    height: 10%;
    max-height: 35px;
    font-size: 2.2rem;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    @media only screen and (max-width: 700px) {
      font-size: 1rem;
      background: none;
    }

    .top-link-button {
      position: relative;
      display: inline-block;
      padding: .5% 1.25%;
      background-color: #55a3fa;
      background-image: linear-gradient(#a8cffa, #55a3fa 65%);
      border-radius: 3px;
      box-shadow: 0px 4px 6px -2px black;
    
      text-decoration: none;
      color: #fff;
      font-size: 1.2rem;
      font-family: sans-serif;
      font-weight: 500;
      letter-spacing: 0.05rem;
      text-shadow: 1px 1px 2px darkslategray;
      @media only screen and (max-width: 700px) {
        box-shadow: none;
      }

      &:after {
        content: '';
        position: absolute;
        top: 2px;
        left: 2px;
        width: calc(100% - 4px);
        height: 50%;
        background: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.2));
      }

      &:active {
        padding: .5% 1%;
        text-shadow: -1px -1px 2px darkslategray;
        box-shadow: 0px 2px 6px -2px black;
      }
    }
  }

  .project {
    display: flex;
    // max-width: 95vw;
    padding: 0 2.5%;
    @media only screen and (max-width: 700px) {
      flex-direction: column;
      margin-top: 20%;
    }
    .content-viewer {
      // max-height: 50%;
      display: flex;
      align-items: center;

      @media only screen and (max-width: 700px) {
      }
      button {
        height: 25%;
        outline: none;
        background: none;
        border: none;
        font-size: 35px;
        // background-image: linear-gradient(to bottom right, #fa5a55, #fa55a3);
        @media only screen and (max-width: 700px) {
          height: 100%;
        }
        &:hover {
          cursor: pointer;
        }
      }
      #right {
        border-top-right-radius: 25%;
        border-bottom-right-radius: 25%;
      }
      #left {
        border-top-left-radius: 25%;
        border-bottom-left-radius: 25%;
      }
      .img-container {
        // display: flex;
        // flex-direction: column;
        img {
          color: red;
          width: 100%;
          @media only screen and (max-width: 700px) {
            height: 100%;
          }
        }
      }
    }
    .info-panel {
      margin-left: 2%;
      padding: 0 .25%;
      max-width: 50%;
      border: 1px solid black;
      flex-wrap: wrap;
      background: white;
       text-align: center;
       box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
       @media only screen and (max-width: 700px) {
        max-width: 100%;
      }
      h2 {
        text-align: center;
        margin: 5%;
        @media only screen and (max-width: 700px) {
          margin: 10% 0;
        }
      }
      p {
        text-align: center;
        font-size: 1.2rem;
        letter-spacing: .05rem;
        @media only screen and (max-width: 700px) {
          margin: 0;
          word-wrap: break-word;
        }
      }

      ul {
        text-align: left;
        width: 100%;
        padding: 0;
      }

      .noUrl {
        text-decoration: none;
        color: white;
        opacity: 0;
        margin: 6% 0;
      }

      li {
        color: blue;
        text-decoration: underline;
        margin: 6% 0;
        letter-spacing: 0.06rem;
        list-style: none;
        text-align: center;
      }
    }
  }

  .buttons {
    display: flex;
    width: 100%;
    justify-content: space-evenly;
    margin-bottom: 10%;
  }

  .contact-links {
    display: flex;
    width: 90%;
    flex-wrap: wrap;
    padding: 0;
    height: 80%;
    justify-content: space-evenly;
    h3 {
      font-size: 1.4rem;
    }
    h4 {
      font-size: .8rem;
    }
    li {
      border: 5px solid #fa5a55;
      display: flex;
      justify-content: space-between;
      margin-top: 4%;
      font-size: 3.6rem;
      background: #6596cc;
      text-align: center;
      width: 45%;
      border-radius: 5px;

      @media only screen and (max-width: 700px) {
        border-width: 2px;
      }
      a {
        color: black;
        width: 100%;
        display: flex;
        flex-direction: column;
        padding: 0 5%;
        display: flex;
        align-items: center;
        justify-content: space-evenly;
      }
    }
  }

  .main {
    margin: 2% 4%;

    .topic {
      h3 {
        font-size: 1.6rem;
        letter-spacing: 0.15rem;
        display: flex;
        justify-content: center;
      }
      h4 {
        display: flex;
        justify-content: center;
        font-size: 1.2rem;
      }

      p {
        font-size: 1rem;
        margin: 3%;
        line-height: 1.2rem;
        letter-spacing: 0.05rem;
      }
    }

    .skills {
      min-height: 100vh;
      padding-top: 10%;
      ul {
        display: flex;
        flex-wrap: wrap;

        li {
          font-size: 2.4rem;
          margin: 2rem 0.5rem;
          letter-spacing: 0.05rem;
          background-color: #4a8fdb;
          border-radius: 2px;
          display: flex;
          justify-content: center;
          align-items: center;
          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12),
            0 1px 2px rgba(0, 0, 0, 0.24);
          transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
          width: 32%;
          min-height: 110px;

          &:hover {
            box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
              0 10px 10px rgba(0, 0, 0, 0.22);
            cursor: pointer;
            background-color: #95c6fc;
          }
        }
      }
    }
  }

  footer {
    font-size: 1.4rem;
    padding: 15px;
    text-align: center;
  }
}

